# aixodoo_documentation_crew

./: Odoo Approval Rules.md  Odoo Automation Rules.md  Odoo FIelds and Widgets.md  Odoo Implementation Guide.md  Odoo Mapping Report.md  Odoo Models, Modules and Apps.md  Odoo PDF Report.md  Odoo Views.md  README.md  Requirements Report.md  final_urls.py  links_list.txt  pyproject.toml  requirements.txt  training_data.pkl  urls.txt
db/: chroma.sqlite3
src/aixodoo/: crew.py  final_report.py  main.py
src/aixodoo/config/: agents.yaml  tasks.yaml
src/aixodoo/tools/: custom_tool.py
