[project]
name = "aixodoo"
version = "0.1.0"
description = "aixodoo using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.76.2,<1.0.0",
    "streamlit==1.40.1",
    "markdown==3.7",
]

[project.scripts]
aixodoo = "aixodoo.main:run"
run_crew = "aixodoo.main:run"
train = "aixodoo.main:train"
replay = "aixodoo.main:replay"
test = "aixodoo.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
